fix: make `proof_types_supported` requirement optional

--- a/oid4vci/Cargo.toml
+++ b/oid4vci/Cargo.toml
@@ -28,4 +28,5 @@ serde_with.workspace = true
 tokio.workspace = true
 
 [dev-dependencies]
+oid4vc-core = { path = "../oid4vc-core", features = ["test-utils"] }
 wiremock = "0.5"
